--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cypress": "10.7"
   },
   "dependencies": {
+    "chai": "^4.3.7",
     "Cypress": "npm:cypress@10.7",
     "express": "^4.18.2"
   }
